--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ plugins {
 	id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
 }
 
-group = 'site.mylittlestore'
+group = 'site.websocketchat'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
@@ -47,7 +47,18 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.7.8'
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
-	//Spring
+	//Spring`
+
+	//WebSocket
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	//sockjs
+	implementation 'org.webjars:sockjs-client:1.5.1'
+	//stomp
+	implementation 'org.webjars:stomp-websocket:2.3.4'
+	//jQuery
+	implementation 'org.webjars:jquery:3.6.4'
+	//Webjars
+	implementation 'org.webjars:webjars-locator-core'
 
 	//Mail
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
@@ -55,6 +66,7 @@ dependencies {
 	//Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	//Spring Security
 
 	//JWT
